--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 /* index.css */
 
-body {
-  margin: 0;
-  background-color: #fff0f6; 
-  font-family: 'Segoe UI', sans-serif;
-  color: #333;
+body, #root {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
+
 
 a {
   color: inherit;
