--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -95,3 +95,21 @@
 .dropdown-menu a:hover {
   color: #ff69b4;
 }
+
+
+.cart-link {
+  position: relative;
+  
+}
+
+.cart-count {
+  background-color: hotpink;
+  color: white;
+  font-size: 0.7rem;
+  padding: 2px 6px;
+  border-radius: 50%;
+  position: absolute;
+  top: -8px;
+  right: -12px;
+}
+
